# realtime-chat-app

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
lib/db/: .env  Cargo.toml  diesel.toml
lib/db/migrations/2024-06-19-082540_create_users/: up.sql
lib/db/migrations/2024-06-19-082541_create_groups/: up.sql
lib/db/migrations/2024-06-19-082542_create_users_groups/: down.sql  up.sql
lib/db/migrations/2024-06-19-082543_create_message_types/: down.sql  up.sql
lib/db/migrations/2024-06-19-082544_create_messages/: up.sql
lib/db/migrations/2024-06-19-082545_create_files/: up.sql
lib/db/migrations/2024-06-19-085857_create_fowarded_messages/: down.sql  up.sql
lib/db/src/: database.rs  lib.rs  schema.rs
lib/db/src/models/: file.rs  group.rs  message.rs  mod.rs  relationships.rs  user.rs
lib/db/src/repositories/: file.rs  message.rs  mod.rs  room.rs  user.rs
lib/logger/: Cargo.toml
lib/logger/src/: lib.rs
lib/services/: Cargo.toml
lib/services/src/: errors.rs  lib.rs  routes.rs
lib/services/src/features/: mod.rs
lib/services/src/features/auth/: extractor.rs  handler.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  types.rs
lib/services/src/features/chat/: handlers.rs  routes.rs  types.rs
lib/services/src/features/room/: handlers.rs  routes.rs  types.rs
lib/services/src/features/users/: handlers.rs  mod.rs  repositories.rs  routes.rs  types.rs
lib/services/src/utils/: general_response.rs  jwt.rs  mod.rs
ops/docker/: .gitignore  docker-compose.yml
